--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A Parser for shd Shader. Ported from oryol",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "/scripts/dev.js"
   },
   "author": "Peter Jakobs",
   "license": "MIT",
